# check

./: .coderabbit.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.yml  CHANGELOG_v1.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  PACKAGE.md  RELEASES.md  ROME_CHANGELOG.md  biome.json  check.sh  clippy.toml  code.sh  code_renaming.sh  files_renaming.sh  folder_renaming.sh  install.sh  justfile  package.json  pnpm-lock.md  pnpm-lock.yaml  pnpm-workspace.yaml  size.sh
crates/check_analyze/: CONTRIBUTING.md  Cargo.toml
crates/check_analyze/src/: analyzer_plugin.rs  categories.rs  context.rs  diagnostics.rs  lib.rs  matcher.rs  options.rs  query.rs  registry.rs  rule.rs  services.rs  signals.rs  suppression_action.rs  suppressions.rs  syntax.rs  utils.rs  visitor.rs
crates/check_aria/: Cargo.toml
crates/check_aria/src/: roles.rs
crates/check_cli/: Cargo.toml  README.md
crates/check_cli/examples/: text_reporter.rs
crates/check_cli/src/: changed.rs  cli_options.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  panic.rs
crates/check_cli/tests/: main.rs  snap_test.rs
crates/check_configuration/: Cargo.toml
crates/check_configuration/benches/: biome_bench.json  check_json.rs
crates/check_configuration/src/: bool.rs  css.rs  diagnostics.rs  editorconfig.rs  extends.rs  formatter.rs  graphql.rs  grit.rs  html.rs  json.rs  lib.rs  max_size.rs  organize_imports.rs  overrides.rs  plugins.rs  vcs.rs
crates/check_configuration/tests/: spec_tests.rs
crates/check_console/: CODESPAN_LICENSE  Cargo.toml  LICENSE  README.md
crates/check_console/src/: fmt.rs  lib.rs  markup.rs  utils.rs
crates/check_console/tests/: macro.rs
crates/check_css_analyze/: Cargo.toml
crates/check_css_analyze/benches/: css_analyzer.rs
crates/check_css_analyze/src/: fonts.rs  lib.rs  lint.rs  order.rs  registry.rs  suppression_action.rs  utils.rs
crates/check_css_analyze/tests/: quick_test.rs  spec_tests.rs
crates/check_css_factory/: Cargo.toml
crates/check_css_factory/src/: lib.rs
crates/check_css_formatter/: Cargo.toml  README.md
crates/check_css_formatter/benches/: css_formatter.rs
crates/check_css_formatter/src/: comments.rs  context.rs  cst.rs  generated.rs  lib.rs  prelude.rs  separated.rs  trivia.rs  verbatim.rs
crates/check_css_formatter/tests/: language.rs  prettier_tests.rs  quick_test.rs  spec_test.rs
crates/check_css_parser/: Cargo.toml  LICENSE  README.md
crates/check_css_parser/benches/: css_parser.rs
crates/check_css_parser/src/: lib.rs  parser.rs  token_source.rs
crates/check_css_parser/tests/: spec_test.rs
crates/check_css_semantic/: Cargo.toml
crates/check_css_semantic/src/: events.rs  format_semantic_model.rs
crates/check_css_syntax/: Cargo.toml
crates/check_css_syntax/src/: file_source.rs  lib.rs  selector_ext.rs  stmt_ext.rs  string_ext.rs  syntax_node.rs
crates/check_deserialize_macros/: Cargo.toml
crates/check_deserialize_macros/src/: deserializable_derive.rs  lib.rs  merge_derive.rs
crates/check_diagnostics/: CONTRIBUTING.md  Cargo.toml  README.md
crates/check_diagnostics/examples/: cli.rs  fs.rs  lint.rs  serde.rs
crates/check_diagnostics/src/: adapters.rs  advice.rs  context.rs  diagnostic.rs  display.rs  display_github.rs  error.rs  lib.rs  location.rs  serde.rs  suggestion.rs
crates/check_diagnostics/tests/: disagnostics.rs
crates/check_formatter/: CONTRIBUTING.md  Cargo.toml  README.md  shared_traits.rs
crates/check_formatter/src/: arguments.rs  buffer.rs  builders.rs  comments.rs  diagnostics.rs  format_element.rs  format_extensions.rs  formatter.rs  lib.rs  macros.rs  printed_tokens.rs  separated.rs  source_map.rs  trivia.rs
crates/check_formatter_test/: Cargo.toml
crates/check_formatter_test/src/: check_reformat.rs  diff_report.rs  lib.rs  snapshot_builder.rs  spec.rs  test_prettier_snapshot.rs  utils.rs
crates/check_glob/: Cargo.toml
crates/check_glob/src/: editorconfig.rs  lib.rs
crates/check_graphql_analyze/: Cargo.toml
crates/check_graphql_analyze/src/: lib.rs  lint.rs  registry.rs  suppression_action.rs
crates/check_graphql_analyze/tests/: spec_tests.rs
crates/check_graphql_factory/: Cargo.toml
crates/check_graphql_factory/src/: lib.rs  make.rs
crates/check_graphql_formatter/: Cargo.toml  README.md
crates/check_graphql_formatter/benches/: graphql_formatter.rs
crates/check_graphql_formatter/src/: comments.rs  context.rs  cst.rs  generated.rs  lib.rs  prelude.rs  trivia.rs  verbatim.rs
crates/check_graphql_formatter/tests/: language.rs  prettier_tests.rs  quick_test.rs  spec_test.rs
crates/check_graphql_parser/: Cargo.toml
crates/check_graphql_parser/benches/: graphql_parser.rs
crates/check_graphql_parser/src/: lib.rs  token_source.rs
crates/check_graphql_parser/tests/: spec_test.rs
crates/check_graphql_semantic/: Cargo.toml
crates/check_graphql_semantic/src/: events.rs  lib.rs
crates/check_grit_factory/: Cargo.toml
crates/check_grit_factory/src/: lib.rs
crates/check_grit_formatter/: Cargo.toml
crates/check_grit_formatter/src/: comments.rs  context.rs  cst.rs  generated.rs  lib.rs  prelude.rs  separated.rs  trivia.rs  verbatim.rs
crates/check_grit_formatter/tests/: language.rs  quick_test.rs  spec_test.rs
crates/check_grit_parser/: Cargo.toml
crates/check_grit_parser/src/: constants.rs  lib.rs  token_source.rs
crates/check_grit_parser/tests/: spec_test.rs
crates/check_grit_patterns/: Cargo.toml
crates/check_grit_patterns/src/: diagnostics.rs  errors.rs  grit_analysis_ext.rs  grit_binding.rs  grit_built_in_functions.rs  grit_context.rs  grit_css_parser.rs  grit_definitions.rs  grit_js_parser.rs  grit_node.rs  grit_node_patterns.rs  grit_query.rs  grit_target_language.rs  grit_target_node.rs  lib.rs  pattern_compiler.rs  source_location_ext.rs  util.rs
crates/check_grit_patterns/tests/: quick_test.rs  spec_tests.rs
crates/check_grit_syntax/: Cargo.toml
crates/check_html_factory/: Cargo.toml
crates/check_html_formatter/: Cargo.toml
crates/check_html_syntax/: Cargo.toml
(+7667 files in other folders)
