[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's analyzer shared infrastructure"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_analyze"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_console            = { workspace = true }
check_deserialize        = { workspace = true, optional = true }
check_deserialize_macros = { workspace = true, optional = true }
check_diagnostics        = { workspace = true }
check_parser             = { workspace = true }
check_rowan              = { workspace = true }
check_suppression        = { workspace = true }
camino                   = { workspace = true }
enumflags2               = { workspace = true }
indexmap                 = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"], optional = true }

[features]
schema = ["dep:schemars", "check_console/schema", "serde"]
serde  = ["dep:serde", "dep:check_deserialize", "dep:check_deserialize_macros"]

[lints]
workspace = true
