[package]
authors.workspace    = true
categories.workspace = true
description          = "Utilities to print messages (formatted with check_markup) and diagnostics"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_console"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_markup         = { workspace = true }
check_text_size      = { workspace = true }
schemars             = { workspace = true, optional = true }
serde                = { workspace = true, optional = true, features = ["derive"] }
termcolor            = { workspace = true }
unicode-segmentation = "1.12.0"
unicode-width        = { workspace = true }

[dev-dependencies]
trybuild = "=1.0.106"


[features]
schema = ["dep:schemars", "serde", "check_text_size/schema"]
serde  = ["dep:serde"]

[lints]
workspace = true
