[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's CSS linter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_css_analyze"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_analyze            = { workspace = true }
check_console            = { workspace = true }
check_css_factory        = { workspace = true }
check_css_semantic       = { workspace = true }
check_css_syntax         = { workspace = true }
check_deserialize        = { workspace = true }
check_deserialize_macros = { workspace = true }
check_diagnostics        = { workspace = true }
check_rowan              = { workspace = true }
check_rule_options       = { workspace = true }
check_string_case        = { workspace = true }
check_suppression        = { workspace = true }
camino                   = { workspace = true }
regex                    = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"] }

[dev-dependencies]
check_css_parser    = { path = "../check_css_parser" }
check_fs            = { workspace = true }
check_plugin_loader = { workspace = true }
check_test_utils    = { path = "../check_test_utils" }
camino              = { workspace = true }
criterion           = { package = "codspeed-criterion-compat", version = "=3.0.3" }
insta               = { workspace = true, features = ["glob"] }
tests_macros        = { path = "../tests_macros" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[features]
schema = ["schemars"]

[lints]
workspace = true


[[bench]]
harness = false
name    = "css_analyzer"
