[package]
authors.workspace    = true
categories.workspace = true
description          = "Utilities to create CSS AST for check_css_parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_css_factory"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_css_syntax = { workspace = true }
check_rowan      = { workspace = true }

[lints]
workspace = true
