[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's CSS parser"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_css_parser"
repository.workspace = true
version              = "0.5.7"

[dependencies]
check_console       = { workspace = true }
check_css_factory   = { workspace = true }
check_css_syntax    = { workspace = true }
check_diagnostics   = { workspace = true }
check_parser        = { workspace = true }
check_rowan         = { workspace = true }
check_unicode_table = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
check_configuration = { path = "../check_configuration" }
check_deserialize   = { path = "../check_deserialize" }
check_fs            = { path = "../check_fs" }
check_service       = { path = "../check_service" }
check_test_utils    = { path = "../check_test_utils" }
camino              = { workspace = true }
criterion           = { package = "codspeed-criterion-compat", version = "=3.0.3" }
insta               = { workspace = true }
quickcheck          = { workspace = true }
quickcheck_macros   = { workspace = true }
tests_macros        = { path = "../tests_macros" }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[lints]
workspace = true

[[bench]]
harness = false
name    = "css_parser"
