[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's semantic model for CSS"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_css_semantic"
repository.workspace = true
version              = "0.0.0"

[dependencies]
check_css_syntax = { workspace = true }
check_formatter  = { workspace = true }
check_rowan      = { workspace = true }
rustc-hash       = { workspace = true }

[dev-dependencies]
check_css_parser = { path = "../check_css_parser" }

[lints]
workspace = true
