[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's shared infrastructure to implement reporting pretty error and diagnostics"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_diagnostics"
repository.workspace = true
version              = "0.5.7"

[[example]]
name = "cli"
test = true

[[example]]
name = "fs"
test = true

[[example]]
name = "lint"
test = true

[[example]]
name = "serde"
test = true

[dependencies]
backtrace                    = "0.3.75"
check_console                = { workspace = true, features = ["serde"] }
check_diagnostics_categories = { workspace = true, features = ["serde"] }
check_diagnostics_macros     = { workspace = true }
check_rowan                  = { workspace = true }
check_text_edit              = { workspace = true, features = ["serde"] }
check_text_size              = { workspace = true, features = ["serde"] }
bpaf                         = { workspace = true, optional = true }
camino                       = { workspace = true, optional = true }
enumflags2                   = { workspace = true, features = ["serde"] }
schemars                     = { workspace = true, optional = true }
serde                        = { workspace = true, features = ["derive"] }
serde_json                   = { workspace = true }
termcolor                    = { workspace = true }
terminal_size                = { workspace = true }
unicode-width                = { workspace = true }

[features]
bpaf   = ["dep:bpaf"]
camino = ["dep:camino"]
schema = ["dep:schemars", "check_text_edit/schema", "check_diagnostics_categories/schema", "check_console/schema"]
std    = []

[dev-dependencies]
insta      = { workspace = true }
serde_json = { workspace = true }
trybuild   = "=1.0.106"

[lints]
workspace = true
