[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's formatter shared infrastructure"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_formatter"
repository.workspace = true
version              = "0.5.7"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_console            = { workspace = true }
check_deserialize        = { workspace = true }
check_deserialize_macros = { workspace = true }
check_diagnostics        = { workspace = true }
check_rowan              = { workspace = true }
check_string_case        = { workspace = true }
camino                   = { workspace = true }
cfg-if                   = { workspace = true }
countme                  = { workspace = true, optional = true }
drop_bomb                = "0.1.5"
indexmap                 = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"], optional = true }
tracing                  = { workspace = true }
unicode-width            = { workspace = true }

[dev-dependencies]
check_js_parser = { path = "../check_js_parser" }
check_js_syntax = { path = "../check_js_syntax" }
insta           = { workspace = true }

[features]
countme = ["dep:countme"]
schema  = ["dep:schemars", "serde"]
serde   = ["dep:serde", "check_deserialize/serde", "check_rowan/serde"]

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[lints]
workspace = true
