[package]
authors.workspace    = true
categories.workspace = true
description          = "<DESCRIPTION>"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_glob"
repository.workspace = true
version              = "0.1.0"

[lints]
workspace = true

[dependencies]
check_deserialize        = { workspace = true, optional = true }
check_deserialize_macros = { workspace = true, optional = true }
check_text_size          = { workspace = true, optional = true }
globset                  = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, optional = true }

[features]
check_deserialize = ["dep:check_deserialize", "dep:check_deserialize_macros", "dep:check_text_size"]
schema            = ["dep:schemars", "serde"]
serde             = ["dep:serde"]
