[package]
authors.workspace    = true
categories.workspace = true
description          = "Check's GraphQL linter"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "check_graphql_analyze"
repository.workspace = true
version              = "0.0.1"

[dependencies]
check_analyze            = { workspace = true }
check_console            = { workspace = true }
check_deserialize        = { workspace = true }
check_deserialize_macros = { workspace = true }
check_diagnostics        = { workspace = true }
check_graphql_factory    = { workspace = true }
check_graphql_syntax     = { workspace = true }
check_rowan              = { workspace = true }
check_rule_options       = { workspace = true }
check_string_case        = { workspace = true }
check_suppression        = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"] }

[dev-dependencies]
check_graphql_parser = { path = "../check_graphql_parser" }
check_test_utils     = { path = "../check_test_utils" }
camino               = { workspace = true }
insta                = { workspace = true, features = ["glob"] }
tests_macros         = { path = "../tests_macros" }

[features]
schema = ["schemars"]

[lints]
workspace = true
